started first door

--- a/index.html
+++ b/index.html
@@ -30,6 +30,21 @@
         <div class="popup popup_hidden popup_level_1">
             <div class="popup__content popup__content_level_1">
                 <div class="popup__close">╳</div>
+                <div class="door-riddle">
+                    <div class="chain-riddle chain-riddle_0">
+                        <div class="door-riddle__button door-riddle__button_dark"></div>
+                        <div class="chain">
+                            <div class="chain__head"></div>
+                        </div>
+                    </div>
+
+                    <div class="chain-riddle chain-riddle_1">
+                        <div class="door-riddle__button door-riddle__button_dark"></div>
+                        <div class="chain">
+                            <div class="chain__head"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="popup popup_hidden popup_level_2">
