--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="popup popup_hidden popup_level_1">
-            <div class="popup__content popup__content_level_1">
+            <div class="popup__content popup__content_level_1" touch-action="none">
                 <div class="popup__close">╳</div>
                 <div class="door-riddle">
                     <div class="chain-riddle">
