basic dragndrop for second door

--- a/index.html
+++ b/index.html
@@ -43,12 +43,25 @@
                 </div>
             </div>
         </div>
-        <div class="popup popup_hidden popup_level_2">
+        <div class="popup popup_hidden popup_level_2" touch-action="none">
             <div class="popup__content popup__content_level_2">
                 <div class="popup__close">╳</div>
+                <div class="door-riddle door-riddle_column">
+                    <div class="lock lock_yellow lock_0">
+                    </div>
+                    <!--
+                         <div class="lock-riddle">
+                         <div class="lock-riddle__shield">
+                         </div>
+                         </div>
+                       -->
+                    <div class="door-riddle door-riddle_column door-riddle_50percent">
+                        <div class="key key_yellow key_0"></div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="popup popup_hidden popup_level_3">
+        <div class="popup popup_hidden popup_level_3" touch-action="none">
             <div class="popup__content popup__content_level_3">
                 <div class="popup__close">╳</div>
             </div>
