--- a/index.html
+++ b/index.html
@@ -47,14 +47,20 @@
             <div class="popup__content popup__content_level_2">
                 <div class="popup__close">╳</div>
                 <div class="door-riddle door-riddle_column">
-                    <div class="lock lock_yellow lock_0">
+                    <div class="door-riddle door-riddle_padded">
+                        <div class="chain-riddle">
+                            <div class="door-riddle__button door-riddle__button_dark"></div>
+                            <div class="chain chain_0"></div>
+                        </div>
+                        <div class="lock-riddle">
+                            <div class="brick brick_0"></div>
+                            <div class="lock lock_yellow lock_0"></div>
+                        </div>
+                        <div class="chain-riddle">
+                            <div class="door-riddle__button door-riddle__button_dark"></div>
+                            <div class="chain chain_weight chain_1"></div>
+                        </div>
                     </div>
-                    <!--
-                         <div class="lock-riddle">
-                         <div class="lock-riddle__shield">
-                         </div>
-                         </div>
-                       -->
                     <div class="door-riddle door-riddle_column door-riddle_50percent">
                         <div class="key key_yellow key_0"></div>
                     </div>
