--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 </div>
             </div>
         </div>
-        <div class="popup popup_hidden popup_level_2" touch-action="none">
-            <div class="popup__content popup__content_level_2">
+        <div class="popup popup_hidden popup_level_2">
+            <div class="popup__content popup__content_level_2" touch-action="none">
                 <div class="popup__close">╳</div>
                 <div class="door-riddle door-riddle_column">
                     <div class="door-riddle door-riddle_padded">
@@ -67,8 +67,8 @@
                 </div>
             </div>
         </div>
-        <div class="popup popup_hidden popup_level_3" touch-action="none">
-            <div class="popup__content popup__content_level_3">
+        <div class="popup popup_hidden popup_level_3">
+            <div class="popup__content popup__content_level_3" touch-action="none">
                 <div class="popup__close">╳</div>
             </div>
         </div>
